@@ -1,3 +1,8 @@
+2003-10-10  Elena Zannoni  <ezannoni@redhat.com>
+
+	* sh-tdep.c (sh_use_struct_convention): Clarify one case in
+	comment.
+
 2003-10-10  Corinna Vinschen  <vinschen@redhat.com>
 
 	* sh-tdep.c (sh_use_struct_convention): Clean up to have a
